# synergy-screen-monitor

./: .env.example  .env.primary.example  .env.secondary.example  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  build.sh  com.synergy.watchdog.plist  config.py  found-him.py  install-watchdog.sh  monitor.sh  requirements.txt  setup.py  start-all.sh  start.sh  stop.sh  uninstall-watchdog.sh  utils.py  waldo.py  watch-desktops.sh  watchdog.sh
.claude/commands/: commit.yml
.claude/session-logs/: 2025-10-06-1020-macos-upgrade-watchdog.md  2026-03-17-1700-mqtt-stale-socket-fix.md
.claude/session-logs/archive/: handoff-2026-03-17-1646.md
mqtt_clients/: __init__.py  factory.py  interface.py  nanomq_bindings.cpp  nanomq_client.py  paho_client.py
tests/: __init__.py  test_found_him.py  test_integration.py  test_nanomq.py  test_waldo.py
